<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/back01"
    android:layout_height="match_parent"
    android:id="@+id/registeractivityid"
    tools:context=".RegisterActivity">

    <RelativeLayout
        android:id="@+id/toolbarid"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/shape_toolbar2"

        >

        <ImageView
            android:id="@+id/backid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@drawable/ic_baseline_arrow_back_24"

            />

        <ImageView
            android:id="@+id/iconId"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:src="@drawable/icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iconId"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:id="@+id/registertextid"
            android:fontFamily="sans-serif-condensed"
            android:text="Create New Account"
            android:textColor="@color/white"
            android:textSize="27sp"

            />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/namelayout"
                app:hintEnabled="false">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/namneid"
                    android:hint="Name"
                    android:drawableStart="@drawable/ic_baseline_person_24"
                    android:drawablePadding="10dp"
                    android:background="@drawable/shape_edittext"
                    android:textColorHint="#D8757171"

                    />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/emaillayout"
                app:hintEnabled="false"
                android:layout_below="@+id/namelayout">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/emailid"

                    android:hint="Email"
                    android:drawableStart="@drawable/ic_baseline_email_24"
                    android:drawablePadding="10dp"
                    android:background="@drawable/shape_edittext"
                    android:textColorHint="#D8757171"

                    />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/passwordlayout"
                app:passwordToggleEnabled="true"
                app:hintEnabled="false"
                android:layout_below="@+id/emaillayout"
                android:layout_marginTop="5dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/passwordid"
                    android:hint="Password"
                    android:drawableStart="@drawable/ic_baseline_lock_24"
                    android:drawablePadding="10dp"
                    android:background="@drawable/shape_edittext"
                    android:textColorHint="#D8757171"
                    android:inputType="textPassword"

                    />


            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/passwordlayout"
                android:layout_marginTop="40dp"
                android:text="Register"
                android:background="@drawable/shape_button01"
                android:textColor="@color/white"
                android:id="@+id/registerbtn"
                />


        </RelativeLayout>


    </ScrollView>

   <ProgressBar
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:foregroundGravity="center"
       android:visibility="gone"
       android:id="@+id/progressid"
       android:layout_marginLeft="170dp"
       android:layout_marginTop="600dp">
   </ProgressBar>


</RelativeLayout>